# android-bazel-bug

./: AndroidManifest.xml.in  BUILD.bazel  MainActivity.java  WORKSPACE  hash.py  rules.bzl
